// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders breadcumb correctly 1`] = `
<div
  className="ms-ResizeGroup"
>
  <div
    className=""
  >
    <ol
      aria-describedby={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className=
          ms-FocusZone
          ms-Breadcrumb
          {
            align-items: stretch;
            display: flex;
            margin-bottom: 0;
            margin-left: -4px;
            margin-right: -4px;
            margin-top: 0;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
          }
      data-focuszone-id="FocusZone0"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="navigation"
    >
      <li
        className=
            ms-Breadcrumb-crumb
            {
              display: flex;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
            }
      >
        <span
          className=
              ms-Breadcrumb-crumbLabel
              {
                height: 40px;
                line-height: 40px;
                padding-bottom: 0;
                padding-left: 4px;
                padding-right: 4px;
                padding-top: 0;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
        >
          <div
            aria-describedby={undefined}
            className=
                ms-TooltipHost
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 21px;
                  font-weight: 100;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
                @media screen and (max-width: 639px){& {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 17px;
                  font-weight: 300;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            TestText1
          </div>
        </span>
        <i
          aria-hidden={true}
          aria-label={undefined}
          className=
              ms-Icon
              ms-Breadcrumb-chevron
              {
                display: inline-block;
              }
              {
                color: #666666;
                font-size: 14px;
                height: 40px;
                line-height: 44px;
                overflow: hidden;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                color: WindowText;
              }
              @media screen and (max-width: 639px){& {
                font-size: 11px;
              }
          data-icon-name="ChevronRight"
          role="presentation"
        />
      </li>
      <li
        className=
            ms-Breadcrumb-crumb
            {
              display: flex;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
            }
      >
        <span
          className=
              ms-Breadcrumb-crumbLabel
              {
                height: 40px;
                line-height: 40px;
                padding-bottom: 0;
                padding-left: 4px;
                padding-right: 4px;
                padding-top: 0;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
        >
          <div
            aria-describedby={undefined}
            className=
                ms-TooltipHost
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 21px;
                  font-weight: 100;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
                @media screen and (max-width: 639px){& {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 17px;
                  font-weight: 300;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            TestText2
          </div>
        </span>
        <i
          aria-hidden={true}
          aria-label={undefined}
          className=
              ms-Icon
              ms-Breadcrumb-chevron
              {
                display: inline-block;
              }
              {
                color: #666666;
                font-size: 14px;
                height: 40px;
                line-height: 44px;
                overflow: hidden;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                color: WindowText;
              }
              @media screen and (max-width: 639px){& {
                font-size: 11px;
              }
          data-icon-name="ChevronRight"
          role="presentation"
        />
      </li>
      <li
        className=
            ms-Breadcrumb-crumb
            {
              display: flex;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
            }
      >
        <span
          className=
              ms-Breadcrumb-crumbLabel
              {
                height: 40px;
                line-height: 40px;
                padding-bottom: 0;
                padding-left: 4px;
                padding-right: 4px;
                padding-top: 0;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
        >
          <div
            aria-describedby={undefined}
            className=
                ms-TooltipHost
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 21px;
                  font-weight: 100;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
                @media screen and (max-width: 639px){& {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 17px;
                  font-weight: 300;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            TestText3
          </div>
        </span>
        <i
          aria-hidden={true}
          aria-label={undefined}
          className=
              ms-Icon
              ms-Breadcrumb-chevron
              {
                display: inline-block;
              }
              {
                color: #666666;
                font-size: 14px;
                height: 40px;
                line-height: 44px;
                overflow: hidden;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                color: WindowText;
              }
              @media screen and (max-width: 639px){& {
                font-size: 11px;
              }
          data-icon-name="ChevronRight"
          role="presentation"
        />
      </li>
      <li
        className=
            ms-Breadcrumb-crumb
            {
              display: flex;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
            }
      >
        <span
          className=
              ms-Breadcrumb-crumbLabel
              {
                height: 40px;
                line-height: 40px;
                padding-bottom: 0;
                padding-left: 4px;
                padding-right: 4px;
                padding-top: 0;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
        >
          <div
            aria-describedby={undefined}
            className=
                ms-TooltipHost
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 21px;
                  font-weight: 100;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
                @media screen and (max-width: 639px){& {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 17px;
                  font-weight: 300;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            TestText4
          </div>
        </span>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Breadcrumb renders breadcumb correctly 2`] = `
<div
  className="ms-ResizeGroup"
>
  <div
    className=""
  >
    <ol
      aria-describedby={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className=
          ms-FocusZone
          ms-Breadcrumb
          {
            align-items: stretch;
            display: flex;
            margin-bottom: 0;
            margin-left: -4px;
            margin-right: -4px;
            margin-top: 0;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
          }
      data-focuszone-id="FocusZone5"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="navigation"
    >
      <li
        className=
            ms-Breadcrumb-crumb
            {
              display: flex;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
            }
      >
        <button
          aria-current={null}
          aria-describedby={null}
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={undefined}
          aria-labelledby={null}
          aria-owns={null}
          aria-pressed={undefined}
          className=
              ms-Button
              ms-Button--action
              ms-Button--command
              ms-Breadcrumb-crumbButton
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: transparent;
                border-radius: 0px;
                border: 1px solid transparent;
                box-sizing: border-box;
                color: #333333;
                cursor: pointer;
                display: inline-block;
                font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 40px;
                line-height: 40px;
                outline: transparent;
                padding-bottom: 0;
                padding-left: 4px;
                padding-right: 4px;
                padding-top: 0;
                position: relative;
                text-align: center;
                text-decoration: none;
                text-overflow: ellipsis;
                user-select: none;
                vertical-align: top;
                white-space: nowrap;
              }
              &::-moz-focus-inner {
                border: 0;
              }
              .ms-Fabric.is-focusVisible &:focus:after {
                border: 1px solid #ffffff;
                bottom: 0px;
                content: "";
                left: 0px;
                outline: 1px solid #666666;
                position: absolute;
                right: 0px;
                top: 0px;
                z-index: 1;
              }
              &:hover {
                background-color: #f4f4f4;
                color: #333333;
                cursor: pointer;
              }
              &:hover .ms-Button-icon {
                color: #0078d7;
              }
              &:active {
                background-color: #c8c8c8;
                color: #333333;
              }
              &:active .ms-Button-icon {
                color: #004578;
              }
          data-is-focusable={true}
          disabled={undefined}
          onClick={[Function]}
          type="button"
        >
          <div
            className=
                ms-Button-flexContainer
                {
                  align-items: center;
                  display: flex;
                  flex-wrap: nowrap;
                  height: 100%;
                  justify-content: flex-start;
                }
          >
            <i
              aria-hidden={true}
              aria-label={undefined}
              className=
                  ms-Icon
                  {
                    display: inline-block;
                  }
              data-icon-name="More"
              role="presentation"
            />
            
          </div>
        </button>
        <i
          aria-hidden={true}
          aria-label={undefined}
          className=
              ms-Icon
              ms-Breadcrumb-chevron
              {
                display: inline-block;
              }
              {
                color: #666666;
                font-size: 14px;
                height: 40px;
                line-height: 44px;
                overflow: hidden;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                color: WindowText;
              }
              @media screen and (max-width: 639px){& {
                font-size: 11px;
              }
          data-icon-name="ChevronRight"
          role="presentation"
        />
      </li>
      <li
        className=
            ms-Breadcrumb-crumb
            {
              display: flex;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
            }
      >
        <span
          className=
              ms-Breadcrumb-crumbLabel
              {
                height: 40px;
                line-height: 40px;
                padding-bottom: 0;
                padding-left: 4px;
                padding-right: 4px;
                padding-top: 0;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
        >
          <div
            aria-describedby={undefined}
            className=
                ms-TooltipHost
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 21px;
                  font-weight: 100;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
                @media screen and (max-width: 639px){& {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 17px;
                  font-weight: 300;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            TestText3
          </div>
        </span>
        <i
          aria-hidden={true}
          aria-label={undefined}
          className=
              ms-Icon
              ms-Breadcrumb-chevron
              {
                display: inline-block;
              }
              {
                color: #666666;
                font-size: 14px;
                height: 40px;
                line-height: 44px;
                overflow: hidden;
              }
              @media screen and (-ms-high-contrast: active){& {
                -ms-high-contrast-adjust: none;
                color: WindowText;
              }
              @media screen and (max-width: 639px){& {
                font-size: 11px;
              }
          data-icon-name="ChevronRight"
          role="presentation"
        />
      </li>
      <li
        className=
            ms-Breadcrumb-crumb
            {
              display: flex;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
            }
      >
        <span
          className=
              ms-Breadcrumb-crumbLabel
              {
                height: 40px;
                line-height: 40px;
                padding-bottom: 0;
                padding-left: 4px;
                padding-right: 4px;
                padding-top: 0;
                text-overflow: ellipsis;
                white-space: nowrap;
              }
        >
          <div
            aria-describedby={undefined}
            className=
                ms-TooltipHost
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 21px;
                  font-weight: 100;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  white-space: nowrap;
                }
                @media screen and (max-width: 639px){& {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 17px;
                  font-weight: 300;
                }
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            TestText4
          </div>
        </span>
      </li>
    </ol>
  </div>
</div>
`;
